--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
         <div class="row">
           
-          <a href="#" class="js-modal-btn play-btn" data-video-id="luceih1D1BQ"></a>
+          <a href="#" class="js-modal-btn play-btn" data-video-id="m_AUxlWxzAE"></a>
         </div>
 
       </div>
@@ -353,6 +353,21 @@
               </ul>
               <span>Co-Founder & Manager</span>
               <h4>Mohamed Khaled</h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-md-4 col-lg-3">
+          <div class="team-block bottom">
+            <img src="img/team/5.jpg" class="img-responsive" alt="img">
+            <div class="team-content">
+              <ul class="list-unstyled">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              </ul>
+              <span>Co-Founder & CTO</span>
+              <h4>Shimaa Yasser</h4>
             </div>
           </div>
         </div>
